--- a/zbin/conf/config.properties
+++ b/zbin/conf/config.properties
@@ -1,7 +1,7 @@
 #### git repository configs ####
 gitRep_dirs=/d/GitRepository/
 gitRep_pros=
-excludeGitRep=workPro,ops-project,py-project
+excludeGitRep=work-project,ops-project,py-project,common-project
 
 #### project name config, alias classify name ####
 work=trade-project,cps-project
@@ -10,9 +10,10 @@ group=trade-project,cps-project,task-project,price-project,merchant-project,aica
 
 #### maven configs ####
 pomDir=/d/GitRepository/ops-project/mvn
-excludePro=ops-project,workPro,micro-project,common-project,user-project,credit-project,aicai-project
+excludePro=ops-project,work-project,micro-project,common-project,user-project,credit-project,aicai-project
 installPro=
 installExcludePro=common-libs-project
 deployPro=
 deployExcludePro=common-libs-project
 deployContainStr=trade-,cps-
+dailyService=trade-services-core,trade-services-thirdparty,trade-services-refund,trade-services-mq,cps-web-app,cps-web-h5
