--- a/mvn/pl/pom.xml
+++ b/mvn/pl/pom.xml
@@ -21,7 +21,63 @@
 		</plugins>
 	</build>
 
-	<modules><module>../../../cps-project/cps-facade-project/cps-facade-active</module>
+	<modules>
+<module>../../../aicai-project/aicai-facade-project/aicai-facade-right</module>
+<module>../../../aicai-project/aicai-facade-project/aicai-facade-risk</module>
+<module>../../../aicai-project/aicai-facade-project</module>
+<module>../../../aicai-project/aicai-libs-project/aicai-libs-channel</module>
+<module>../../../aicai-project/aicai-libs-project/aicai-libs-channel-search</module>
+<module>../../../aicai-project/aicai-libs-project/aicai-libs-merchant</module>
+<module>../../../aicai-project/aicai-libs-project/aicai-libs-openapi</module>
+<module>../../../aicai-project/aicai-libs-project/aicai-libs-passport</module>
+<module>../../../aicai-project/aicai-libs-project/aicai-libs-pay</module>
+<module>../../../aicai-project/aicai-libs-project/aicai-libs-right</module>
+<module>../../../aicai-project/aicai-libs-project/aicai-libs-service</module>
+<module>../../../aicai-project/aicai-libs-project/aicai-libs-web</module>
+<module>../../../aicai-project/aicai-libs-project/aicai-libs-workspace</module>
+<module>../../../aicai-project/aicai-libs-project</module>
+<module>../../../aicai-project/aicai-parent</module>
+<module>../../../aicai-project/aicai-services-base-project/aicai-services-base-facade</module>
+<module>../../../aicai-project/aicai-services-base-project</module>
+<module>../../../aicai-project/aicai-services-project/aicai-services-account</module>
+<module>../../../aicai-project/aicai-services-project/aicai-services-activity</module>
+<module>../../../aicai-project/aicai-services-project/aicai-services-bill</module>
+<module>../../../aicai-project/aicai-services-project/aicai-services-channel</module>
+<module>../../../aicai-project/aicai-services-project/aicai-services-common</module>
+<module>../../../aicai-project/aicai-services-project/aicai-services-contract</module>
+<module>../../../aicai-project/aicai-services-project/aicai-services-custserv</module>
+<module>../../../aicai-project/aicai-services-project/aicai-services-facade</module>
+<module>../../../aicai-project/aicai-services-project/aicai-services-jnh</module>
+<module>../../../aicai-project/aicai-services-project/aicai-services-knowledge</module>
+<module>../../../aicai-project/aicai-services-project/aicai-services-merchant</module>
+<module>../../../aicai-project/aicai-services-project/aicai-services-nc</module>
+<module>../../../aicai-project/aicai-services-project/aicai-services-oauth</module>
+<module>../../../aicai-project/aicai-services-project/aicai-services-paychanl-cbc</module>
+<module>../../../aicai-project/aicai-services-project/aicai-services-paychanl-egbank</module>
+<module>../../../aicai-project/aicai-services-project/aicai-services-paychanl-haier</module>
+<module>../../../aicai-project/aicai-services-project/aicai-services-paychanl-miz</module>
+<module>../../../aicai-project/aicai-services-project/aicai-services-paychanl-pingan</module>
+<module>../../../aicai-project/aicai-services-project/aicai-services-paychanl-zhongan</module>
+<module>../../../aicai-project/aicai-services-project/aicai-services-paychanl-zrb</module>
+<module>../../../aicai-project/aicai-services-project/aicai-services-paychanl-zsy</module>
+<module>../../../aicai-project/aicai-services-project/aicai-services-rates</module>
+<module>../../../aicai-project/aicai-services-project/aicai-services-right</module>
+<module>../../../aicai-project/aicai-services-project/aicai-services-risk</module>
+<module>../../../aicai-project/aicai-services-project/aicai-services-settle</module>
+<module>../../../aicai-project/aicai-services-project/aicai-services-trade</module>
+<module>../../../aicai-project/aicai-services-project/aicai-services-workspace</module>
+<module>../../../aicai-project/aicai-services-project</module>
+<module>../../../aicai-project/aicai-task-project/aicai-task-scheduler</module>
+<module>../../../aicai-project/aicai-task-project</module>
+<module>../../../aicai-project/aicai-web-project/aicai-web-backend</module>
+<module>../../../aicai-project/aicai-web-project/aicai-web-cash-gateway</module>
+<module>../../../aicai-project/aicai-web-project/aicai-web-cashier-desk</module>
+<module>../../../aicai-project/aicai-web-project/aicai-web-external</module>
+<module>../../../aicai-project/aicai-web-project/aicai-web-nc</module>
+<module>../../../aicai-project/aicai-web-project/aicai-web-openapi</module>
+<module>../../../aicai-project/aicai-web-project</module>
+<module>../../../aicai-project</module>
+<module>../../../cps-project/cps-facade-project/cps-facade-active</module>
 <module>../../../cps-project/cps-facade-project/cps-facade-cart</module>
 <module>../../../cps-project/cps-facade-project/cps-facade-cms</module>
 <module>../../../cps-project/cps-facade-project/cps-facade-config</module>
@@ -100,8 +156,9 @@
 <module>../../../trade-project/trade-facade-project/trade-facade-scene</module>
 <module>../../../trade-project/trade-facade-project/trade-facade-thirdparty</module>
 <module>../../../trade-project/trade-lib-project</module>
-<module>../../../trade-project/trade-lib-project/trade-lib-component-base</module>
-<module>../../../trade-project/trade-lib-project/trade-lib-facade-base</module>
+<module>../../../trade-project/trade-lib-project/trade-lib-cache</module>
+<module>../../../trade-project/trade-lib-project/trade-lib-ops</module>
+<module>../../../trade-project/trade-lib-project/trade-lib-util</module>
 <module>../../../trade-project/trade-services-project</module>
 <module>../../../trade-project/trade-services-project/trade-services-core</module>
 <module>../../../trade-project/trade-services-project/trade-services-logistics</module>
@@ -111,4 +168,21 @@
 <module>../../../trade-project/trade-services-project/trade-services-search</module>
 <module>../../../trade-project/trade-services-project/trade-services-thirdparty</module>
 <module>../../../trade-project/trade-web-project</module>
+<module>../../../yuny-project</module>
+<module>../../../yuny-project/yuny-project-common</module>
+<module>../../../yuny-project/yuny-project-common/yuny-common-cache</module>
+<module>../../../yuny-project/yuny-project-common/yuny-common-facade</module>
+<module>../../../yuny-project/yuny-project-common/yuny-common-util</module>
+<module>../../../yuny-project/yuny-project-common/yuny-common-web</module>
+<module>../../../yuny-project/yuny-project-facade</module>
+<module>../../../yuny-project/yuny-project-facade/yuny-facade-demand</module>
+<module>../../../yuny-project/yuny-project-facade/yuny-facade-user</module>
+<module>../../../yuny-project/yuny-project-service</module>
+<module>../../../yuny-project/yuny-project-service/yuny-services-demand</module>
+<module>../../../yuny-project/yuny-project-service/yuny-services-user</module>
+<module>../../../yuny-project/yuny-project-task</module>
+<module>../../../yuny-project/yuny-project-task/yuny-task-mq</module>
+<module>../../../yuny-project/yuny-project-webapp</module>
+<module>../../../yuny-project/yuny-project-webapp/yuny-web-backend</module>
+<module>../../../yuny-project/yuny-project-webapp/yuny-web-h5</module>
 </modules></project>
