--- a/zbin/conf/config.properties
+++ b/zbin/conf/config.properties
@@ -1,19 +1,21 @@
 #### git repository configs ####
 gitRep_dirs=/d/GitRepository/
 gitRep_pros=
-excludeGitRep=work-project,ops-project,py-project,common-project
+excludeGitRep=work-project,ops-project,py-project,common-project,credit-project,slave-project,micro-project,user-project
 
 #### project name config, alias classify name ####
-work=trade-project,cps-project
-team=trade-project,cps-project,task-project,price-project,merchant-project
+default_work_alias=work
+work=trade-project,cps-project,task-project
+team=trade-project,cps-project,task-project,price-project,merchant-project,yuny-project
 group=trade-project,cps-project,task-project,price-project,merchant-project,aicai-project,user-project
 
 #### maven configs ####
 pomDir=/d/GitRepository/ops-project/mvn
-excludePro=ops-project,work-project,micro-project,common-project,user-project,credit-project,aicai-project
+excludePro=ops-project,work-project,micro-project,common-project,slave-project
 installPro=
 installExcludePro=common-libs-project
 deployPro=
 deployExcludePro=common-libs-project
-deployContainStr=trade-,cps-
-dailyService=trade-services-core,trade-services-thirdparty,trade-services-refund,trade-services-mq,cps-web-app,cps-web-h5
+deployContainStr=trade-,cps-,yuny-
+#dailyService=trade-services-core,trade-services-thirdparty,trade-services-refund,trade-services-mq,cps-web-app,cps-web-h5
+dailyService=trade-services-core,trade-services-logistics,trade-services-thirdparty,trade-services-refund,trade-services-mq,trade-services-scene,trade-services-search,cps-web-h5,cps-web-app,yuny-services-user,price-services-coupon,price-services-discount,merchant-product
